--- a/Views/Item/Index.cshtml
+++ b/Views/Item/Index.cshtml
@@ -1,7 +1,100 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<InventarioAVMR.Models.Item>;
 @{
+    ViewData["Title"] = "Inventario";
 }
 
-<h1>Inventario</h1>
+
+<h1 class="display-3">Inventario</h1>
+
+<a asp-controller="Item" asp-action="CreateItem"><button type="button" class="btn btn-success">Crear Item</button></a>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Acciones</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td scope="row">@item.Id</td>
+                <td>@item.Nombre</td>
+                <td>@item.Cantidad</td>
+                <td>@item.Precio</td>
+                <td class="col-2">
+                    <!-- Botón para abrir el modal de modificar -->
+                    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modificarItem-@item.Id">Modificar</button>
+                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#borrarItem-@item.Id">Eliminar</button>
+                </td>
+            </tr>
+
+            <!-- Modal para modificar item -->
+            <div class="modal fade" id="modificarItem-@item.Id" tabindex="-1" aria-labelledby="modalLabel-@item.Id" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalLabel-@item.Id">Modificar Item</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form method="post" asp-action="Edit" asp-controller="Item">
+                                <input type="hidden" name="Id" value="@item.Id" />
+
+                                <div class="mb-3">
+                                    <label for="Nombre-@item.Id" class="form-label">Nombre</label>
+                                    <input type="text" class="form-control" name="nombre" value="@item.Nombre" />
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="Cantidad-@item.Id" class="form-label">Cantidad</label>
+                                    <input type="number" class="form-control" name="cantidad" value="@item.Cantidad" />
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="Precio-@item.Id" class="form-label">Precio</label>
+                                    <input type="number" class="form-control" name="precio" value="@item.Precio" />
+                                </div>
+
+                                <button type="submit" class="btn btn-warning">Modificar</button>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Modal para borrar item -->
+            <div class="modal fade" id="borrarItem-@item.Id" tabindex="-1" aria-labelledby="modalLabel-@item.Id" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalLabel-@item.Id">Modificar Item</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form method="post" asp-action="Delete" asp-controller="Item">
+                                <input type="hidden" name="Id" value="@item.Id" />
+                                <p>Esta seguro que desea eliminar el elemento @item.Nombre?</p>
+                                
+                                <button type="submit" class="btn btn-danger">Eliminar</button>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+        
+      
+    </tbody>
+</table>
+
