--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="TrabajoRealizado" asp-action="Index">Trabajos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Bordado" asp-action="Index">Bordado</a>
+                        </li>
                     </ul>
                 </div>
             </div>
