Cards bordados realizados y calculadora de bordado

--- a/Views/Bordado/Index.cshtml
+++ b/Views/Bordado/Index.cshtml
@@ -6,3 +6,24 @@
 }
 
 <h1 class="display-3">Bordado</h1>
+
+<div class="row">
+    <div class="card col-3 m-2" style="width: 18rem;">
+        <img src="Imagenes/Bordado/TarjetaBordadora.gif" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Bordados</h5>
+            <p class="card-text">En esta sección encontrarás los bordados realizados</p>
+            <a asp-action="BordadosRealizados" asp-controller="Bordado" class="btn btn-primary">Ingresar</a>
+        </div>
+    </div>
+
+    <div class="card col-3 m-2" style="width: 18rem;">
+        <img src="Imagenes/Bordado/PrecioBordado.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Calcular precio de bordado</h5>
+            <p class="card-text">En esta sección podrás calcular el precio de tus bordados</p>
+            <a href="#" class="btn btn-primary">Ingresar</a>
+        </div>
+    </div>
+</div>
+
