Vistas crear bordados y bordados realizados, imagenes y base de datos con ruta para la imagen

--- a/Views/Bordado/Index.cshtml
+++ b/Views/Bordado/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="card-body">
             <h5 class="card-title">Bordados</h5>
             <p class="card-text">En esta sección encontrarás los bordados realizados</p>
-            <a asp-action="BordadosRealizados" asp-controller="Bordado" class="btn btn-primary">Ingresar</a>
+            <a asp-action="BordadosRealizadosGet" asp-controller="Bordado" class="btn btn-primary">Ingresar</a>
         </div>
     </div>
 
