--- a/Views/Bordado/BordadosRealizados.cshtml
+++ b/Views/Bordado/BordadosRealizados.cshtml
@@ -1,8 +1,22 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<InventarioAVMR.Models.Bordado>
 @{
     ViewData["Title"] = "Bordados Realizados";
 }
 
 <h1 class="display-3">Bordados Realizados</h1>
+
+<a asp-action="CrearBordado" asp-controller="Bordado"><button class="btn btn-success">Agregar Bordado</button></a>
+
+<div class="row">
+    @foreach (var bordado in Model)
+    {
+        <div class="card col-3 m-2" style="width: 18rem;">
+            <img src="@bordado.Foto" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">@bordado.Nombre</h5>
+                <p class="card-text">Descripción bordado homero</p>
+                <a href="#" class="btn btn-primary">+Info</a>
+            </div>
+        </div>
+    }
+</div>
