Modificación de controlador bordado

--- a/Views/Bordado/CrearBordado.cshtml
+++ b/Views/Bordado/CrearBordado.cshtml
@@ -4,7 +4,7 @@
 
 <h1 class="display-3">Crear Bordado</h1>
 
-<form>
+<form asp-action="CrearBordadoDb" asp-controller="Bordado" method="post">
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
