--- a/Views/Item/Index.cshtml
+++ b/Views/Item/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<InventarioAVMR.Models.Item>;
+﻿
+@model Paginacion<Item>;
 @{
     ViewData["Title"] = "Inventario";
 }
@@ -97,4 +98,29 @@
       
     </tbody>
 </table>
+
+<div class="pagination">
+    <ul class="pagination">
+        @if (Model.HasPreviousPage)
+        {
+            <li class="page-item">
+                <a class="page-link" href="@Url.Action("GetElements", new { pageIndex = Model.PageIndex - 1 })">Anterior</a>
+            </li>
+        }
+
+        @for (int i = 1; i <= Model.TotalPages; i++)
+        {
+            <li class="page-item @(i == Model.PageIndex ? "active" : "")">
+                <a class="page-link" href="@Url.Action("GetElements", new { pageIndex = i })">@i</a>
+            </li>
+        }
+
+        @if (Model.HasNextPage)
+        {
+            <li class="page-item">
+                <a class="page-link" href="@Url.Action("GetElements", new { pageIndex = Model.PageIndex + 1 })">Siguiente</a>
+            </li>
+        }
+    </ul>
+</div>
 
