Corrección base de datos y migraciones para bordado, hilos y bordadohilos

--- a/Views/Bordado/BordadosRealizados.cshtml
+++ b/Views/Bordado/BordadosRealizados.cshtml
@@ -11,10 +11,10 @@
     @foreach (var bordado in Model)
     {
         <div class="card col-3 m-2" style="width: 18rem;">
-            <img src="@bordado.Foto" class="card-img-top" alt="@bordado.Foto">
+            <img src="@bordado.Foto" class="card-img-top m-2 w-auto" alt="@bordado.Foto">
             <div class="card-body">
                 <h5 class="card-title">@bordado.Nombre</h5>
-                <p class="card-text">@bordado.Descripcion</p>
+                <p class="card-text"></p>
                 <a href="#" class="btn btn-primary">+Info</a>
             </div>
         </div>
